# rust-fp

./: README.md  rust-fp-dbus-interface.service
cli/src/: main.rs
common/: Cargo.toml
common/src/: fp_file.rs  get_templates.rs  set_templates.rs
pam-module/: Cargo.toml
pam-module/src/: lib.rs
rust-fp/: Cargo.toml
rust-fp/src/: fingerprint_driver.rs
rust-fp/src/drivers/: cros_fp.rs
