[package]
name = "rust-fp-pam-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rust-fp-common = { path = "../common" }
pam-bindings = "0.1.1"
postcard = "1.0.8"
rust-fp = { path = "../rust-fp" }
zbus = "4.3"
pwd = "1.4"
libc = "0.2"
